--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="menu-section">
       <h3>Navigation</h3>
       <button class="menu-btn" data-action="focusSun">☀️ Focus Sun</button>
-      <button class="menu-btn" data-action="prevPlanet">← Previous Planet</button>
-      <button class="menu-btn" data-action="nextPlanet">Next Planet →</button>
+      <button class="menu-btn" data-action="prevPlanet">← Previous Body</button>
+      <button class="menu-btn" data-action="nextPlanet">Next Body →</button>
       <button class="menu-btn" data-action="resetCamera">🎯 Reset Camera</button>
     </div>
 
