--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <button class="menu-btn" data-action="toggleTrails">🌌 Toggle Trails</button>
       <button class="menu-btn" data-action="toggleOrbitLines">⭕ Toggle Orbits</button>
       <button class="menu-btn" data-action="toggleMarkers">📍 Toggle Markers</button>
+      <button class="menu-btn" data-action="toggleBloom">✨ Toggle Bloom</button>
       <button class="menu-btn" data-action="increaseMarkers">➕ Larger Markers</button>
       <button class="menu-btn" data-action="decreaseMarkers">➖ Smaller Markers</button>
     </div>
